@@ -1,0 +1,21 @@
+<!--[* $Id$ *]-->
+
+<!--[* add the javascript file  *]-->
+<!--[ add_additional_header header=$jsheader ]-->
+
+<br />
+<div>
+    <a href="javascript: addsmilies()" onclick="DoSmilie(' :-) ')" onkeypress="DoSmilie(' :-) ')" title=':-)'><img src='<!--[ $imagepath ]-->/icon_smile.gif' style="border:none;margin-top:3px;margin-bottom:3px;margin-left:3px;" alt='Smilie :-)' /></a> 
+    <a href="javascript: addsmilies()" onclick="DoSmilie(' :-( ')" onkeypress="DoSmilie(' :-( ')" title=':-('><img src='<!--[ $imagepath ]-->/icon_frown.gif' style="border:none;margin-top:3px;margin-bottom:3px;margin-left:3px;" alt='Smilie :-(' /></a> 
+    <a href="javascript: addsmilies()" onclick="DoSmilie(' :-D ')" onkeypress="DoSmilie(' :-D ')" title=':-D'><img src='<!--[ $imagepath ]-->/icon_biggrin.gif' style="border:none;margin-top:3px;margin-bottom:3px;margin-left:3px;" alt='Smilie :-D' /></a> 
+    <a href="javascript: addsmilies()" onclick="DoSmilie(' ;-) ')" onkeypress="DoSmilie(' ;-) ')" title=';-)'><img src='<!--[ $imagepath ]-->/icon_wink.gif' style="border:none;margin-top:3px;margin-bottom:3px;margin-left:3px;" alt='Smilie ;-)' /></a> 
+    <a href="javascript: addsmilies()" onclick="DoSmilie(' :-O ')" onkeypress="DoSmilie(' :-O ')" title=':-O'><img src='<!--[ $imagepath ]-->/icon_eek.gif' style="border:none;margin-top:3px;margin-bottom:3px;margin-left:3px;" alt='Smilie :-O' /></a> 
+    <a href="javascript: addsmilies()" onclick="DoSmilie(' 8-) ')" onkeypress="DoSmilie(' 8-) ')" title='8-)'><img src='<!--[ $imagepath ]-->/icon_cool.gif' style="border:none;margin-top:3px;margin-bottom:3px;margin-left:3px;" alt='Smilie 8-)' /></a> 
+    <a href="javascript: addsmilies()" onclick="DoSmilie(' :-? ')" onkeypress="DoSmilie(' :-? ')" title=':-?'><img src='<!--[ $imagepath ]-->/icon_confused.gif' style="border:none;margin-top:3px;margin-bottom:3px;margin-left:3px;" alt='Smilie :-?' /></a> 
+    <a href="javascript: addsmilies()" onclick="DoSmilie(' :oops: ')" onkeypress="DoSmilie(' :oops: ')" title=':oops:'><img src='<!--[ $imagepath ]-->/icon_redface.gif' style="border:none;margin-top:3px;margin-bottom:3px;margin-left:3px;" alt='Smilie :oops:' /></a> 
+    <a href="javascript: addsmilies()" onclick="DoSmilie(' :lol: ')" onkeypress="DoSmilie(' :lol: ')" title=':lol:'><img src='<!--[ $imagepath ]-->/icon_lol.gif' style="border:none;margin-top:3px;margin-bottom:3px;margin-left:3px;" alt='Smilie :lol:' /></a> 
+    <a href="javascript: addsmilies()" onclick="DoSmilie(' :-P ')" onkeypress="DoSmilie(' :-P ')" title=':-P'><img src='<!--[ $imagepath ]-->/icon_razz.gif' style="border:none;margin-top:3px;margin-bottom:3px;margin-left:3px;" alt='Smilie :-P' /></a> 
+    <a href="javascript: addsmilies()" onclick="DoSmilie(' :roll: ')" onkeypress="DoSmilie(' :roll: ')" title=':roll:'><img src='<!--[ $imagepath ]-->/icon_rolleyes.gif' style="border:none;margin-top:3px;margin-bottom:3px;margin-left:3px;" alt='Smilie :roll:' /></a> 
+    <a href="javascript: addsmilies()" onclick="DoSmilie(' :-x ')" onkeypress="DoSmilie(' :-x ')" title=':-x'><img src='<!--[ $imagepath ]-->/icon_mad.gif' style="border:none;margin-top:3px;margin-bottom:3px;margin-left:3px;" alt='Smilie :-x' /></a> 
+    <a href="javascript: addsmilies()" onclick="DoSmilie(' :evil: ')" onkeypress="DoSmilie(' :evil: ')" title=':evil:'><img src='<!--[ $imagepath ]-->/icon26.gif' style="border:none;margin-top:3px;margin-bottom:3px;margin-left:3px;" alt='Smilie :evil:' /></a> 
+</div>
